be : fix incosisten all endpoint
